[package]
name = "machine_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.0"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.3"
serde = "1.0.160"
serde_json = "1.0.96"
lazy_static = "1.4.0"
simple-log = "1.6.0"
chrono = "0.4.26"
hyper = "0.14.26"
tungstenite = "0.19.0"
base64 = "0.21.2"
jwt-simple = "0.11.5"
